--- a/css/angular-showoff.css
+++ b/css/angular-showoff.css
@@ -213,6 +213,10 @@ body.blackBackground.all {
     text-align: left;
     padding-left: 20px;
 }
+.slide.image p {
+    margin: 0;
+    padding: 0;
+}
 .slide.code p {
     margin: 0;
     padding: 0;
